After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711409 - Takes a long time to actually finish
Takes a long time to actually finish
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 708856 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-11-04 14:15 UTC by Carlos Garcia Campos
Modified: 2013-12-12 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add a way to create a history service in read only mode (10.40 KB, patch)
2013-12-09 19:33 UTC, Carlos Garcia Campos
committed Details | Review
Create the EphyCompletionModel with a history service and bookmarks objects (8.17 KB, patch)
2013-12-09 19:34 UTC, Carlos Garcia Campos
committed Details | Review
Move the search provider to its own binary (18.88 KB, patch)
2013-12-09 19:35 UTC, Carlos Garcia Campos
reviewed Details | Review
Remove the headless mode (4.78 KB, patch)
2013-12-09 20:06 UTC, Carlos Garcia Campos
committed Details | Review
Make the history service work even when the database could not be opened (4.74 KB, patch)
2013-12-11 09:21 UTC, Carlos Garcia Campos
committed Details | Review
Move the search provider to its own binary (18.86 KB, patch)
2013-12-11 09:26 UTC, Carlos Garcia Campos
committed Details | Review

Description Carlos Garcia Campos 2013-11-04 14:15:48 UTC
When you exit epiphany the window is hidden as expected, but the program is actually running for a while. This is quite confusing an annoying when running epiphany from the command line. I think the search provider should be disabled for ephy private instances. For normal instances, I think the search provider should be implemented in a different binary.
Comment 1 Yosef Or Boczko 2013-11-04 14:32:25 UTC
I think it realy good idea. now when I work on epiphany,
I must to move to firefox and to kill epiphany before run
again from the terminal.

Same to gnome-weather, to move the search provider
to program with name same to org.gnome.Web.Porvider or
something else.
Comment 2 Carlos Garcia Campos 2013-12-09 19:33:57 UTC
Created attachment 263838 [details] [review]
Add a way to create a history service in read only mode
Comment 3 Carlos Garcia Campos 2013-12-09 19:34:40 UTC
Created attachment 263839 [details] [review]
Create the EphyCompletionModel with a history service and bookmarks objects
Comment 4 Carlos Garcia Campos 2013-12-09 19:35:21 UTC
Created attachment 263840 [details] [review]
Move the search provider to its own binary
Comment 5 Carlos Garcia Campos 2013-12-09 20:06:34 UTC
Created attachment 263843 [details] [review]
Remove the headless mode
Comment 6 Claudio Saavedra 2013-12-10 13:58:42 UTC
Review of attachment 263838 [details] [review]:

I am still not sure why this is needed at all, but the patch looks OK.
Comment 7 Claudio Saavedra 2013-12-10 14:17:29 UTC
Review of attachment 263840 [details] [review]:

ok

::: src/ephy-search-provider-main.c
@@ +29,3 @@
+  GError *error = NULL;
+
+  if (!ephy_file_helpers_init (NULL, EPHY_FILE_HELPERS_STEAL_DATA, &error)) {

I'm confused. Why do you need to steal the data if you're going to use it in read-only mode?

::: src/ephy-search-provider.c
@@ +269,2 @@
+  /* TODO: Handle the timestamp */
+  str = g_strdup_printf ("epiphany %s", uri);

This should be gvfs-open. Yes, it was wrong before.
Comment 8 Claudio Saavedra 2013-12-10 14:18:14 UTC
Review of attachment 263843 [details] [review]:

Nice!
Comment 9 Claudio Saavedra 2013-12-10 14:19:07 UTC
Review of attachment 263839 [details] [review]:

nice
Comment 10 Carlos Garcia Campos 2013-12-10 15:19:14 UTC
(In reply to comment #6)
> Review of attachment 263838 [details] [review]:
> 
> I am still not sure why this is needed at all, but the patch looks OK.

Because we don't want the search provider to create the history database if ephy has never been launched, for example. Also I get sqlite errors if we don't do this.
Comment 11 Carlos Garcia Campos 2013-12-10 15:21:33 UTC
(In reply to comment #7)
> Review of attachment 263840 [details] [review]:
> 
> ok
> 
> ::: src/ephy-search-provider-main.c
> @@ +29,3 @@
> +  GError *error = NULL;
> +
> +  if (!ephy_file_helpers_init (NULL, EPHY_FILE_HELPERS_STEAL_DATA, &error)) {
> 
> I'm confused. Why do you need to steal the data if you're going to use it in
> read-only mode?
>
Because I misunderstood the flag, you are right it doesn't make any sense.

> ::: src/ephy-search-provider.c
> @@ +269,2 @@
> +  /* TODO: Handle the timestamp */
> +  str = g_strdup_printf ("epiphany %s", uri);
> 
> This should be gvfs-open. Yes, it was wrong before.

I'm not so sure opening something from the history of ephy or an ephy bookmark in another browser is what the user wants. If it was a global history service or bookmarks, it would definitely make sense. In any case, that's a different bug.
Comment 12 Carlos Garcia Campos 2013-12-11 09:21:30 UTC
Created attachment 263969 [details] [review]
Make the history service work even when the database could not be opened

The history could be used by the search provider even before the ephy config dir has been created, if epiphany has never been launched. In such case, the methods will simply fail to get results, and the search provider will only return the special case for searching in the web. In this particular case it makes a lot more sense to use the default browser instead of spawning ephy.
Comment 13 Carlos Garcia Campos 2013-12-11 09:26:05 UTC
Created attachment 263970 [details] [review]
Move the search provider to its own binary

Updated patch to use the right flags when initializing the file helpers. Also added a FIXME for the default browser to be fixed in a separate bug, this one is about moving the provider to its own binary
Comment 14 Claudio Saavedra 2013-12-11 11:08:59 UTC
Review of attachment 263969 [details] [review]:

OK
Comment 15 Claudio Saavedra 2013-12-11 11:13:05 UTC
Review of attachment 263970 [details] [review]:

Looks good now.
Comment 16 Carlos Garcia Campos 2013-12-11 11:24:55 UTC
Pushed to git master, will file new reports for remaining issues
Comment 17 Claudio Saavedra 2013-12-12 10:46:07 UTC
*** Bug 708856 has been marked as a duplicate of this bug. ***