Move the search provider to its own binary

https://bugzilla.gnome.org/show_bug.cgi?id=711409